--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,8 +1,3 @@
-/* Variables */
-$font-header: 'Roboto', sans-serif;
-$color-text: #000000;
-$color-texto: #fff;
-
 /*Global*/
 *, *::before, *::after {
     box-sizing: border-box;
@@ -11,8 +6,8 @@ body {
     margin: 0;
     font-size: 16px;
     line-height: 1.7;
-    font-family: $font-header;
-    color: $color-text;
+    font-family: 'Roboto', sans-serif;
+    color: black;
     background: black;
 }
 .container {
@@ -31,7 +26,7 @@ section {
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
-    color: $color-texto;
+    color: white;
     min-height: 400px;
     display: flex;
     flex-direction: column;
@@ -59,7 +54,7 @@ section {
         text-align: left;
         a {
         text-decoration: none;
-        color: $color-texto;
+        color: white;
         padding: 0 5px;
         margin: 0;
         }
@@ -87,7 +82,6 @@ section {
     min-width: 120px;
     padding: 10px;
     border-radius: 30px;
-    font-family: $font-header;
     font-size: 16px;
     text-align: center;
     text-decoration: none;
@@ -96,13 +90,13 @@ section {
     background-position: 100% 0;
     background-size: 300%;
     font-weight: 500;
-    border-color: $color-texto;
-    color: $color-texto;
-    background-image: linear-gradient(90deg, $color-texto 50%, transparent 50%);
+    border-color: black;
+    color: white;
+    background-image: linear-gradient(90deg, 50% white, transparent 50%);
 }
 .btn:hover {
     background-position: 0 100%;
-    color: $color-one;
+    color: #4834d4;
     transition: $transition;
 }
 /*Our services*/
@@ -110,7 +104,6 @@ section {
     position: relative;
     font-size: 36px;
     margin: 0 0 60px 0;
-    font-family: $font-header
 }
 .section-title:after {
     position: absolute;
@@ -120,7 +113,7 @@ section {
     width: 100px;
     height: 5px;
     transform: translateX(-50%);
-    background: $color-one;
+    background: #4834d4;
 }
 .box-about {
     display: flex;
@@ -133,7 +126,7 @@ section {
         i {
             font-size: 80px;
             margin-bottom: 20px;
-            color: $color-one;
+            color: #4834d4;
         }  
     }    
 }
