--- a/sass/style.scss
+++ b/sass/style.scss
@@ -97,7 +97,7 @@ section {
 .btn:hover {
     background-position: 0 100%;
     color: #4834d4;
-    transition: $transition;
+    transition: all 1s;
 }
 /*Our services*/
 .section-title {
