--- a/sass/style.scss
+++ b/sass/style.scss
@@ -58,13 +58,12 @@ section {
     text-align: center;
     text-decoration: none;
     cursor: pointer;
-    border: 2px solid;
     background-position: 100% 0;
     background-size: 300%;
     font-weight: 500;
     background: #4834d4;
     color: black;
-    background-image: linear-gradient(90deg, 50% white, transparent 50%);
+    background-image: linear-gradient(to bottom right, #a4b0be, #0c2461);
 }
 .btn:hover {
     background-position: 0 100%;
@@ -85,7 +84,7 @@ section {
     width: 100px;
     height: 5px;
     transform: translateX(-50%);
-    background: #4834d4;
+    background: #0c2461;
 }
 .box-about {
     display: flex;
@@ -98,7 +97,7 @@ section {
         i {
             font-size: 80px;
             margin-bottom: 20px;
-            color: #4834d4;
+            color: #0c2461;
         }  
     }    
 }
